--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,61 @@
 asgiref==3.8.1
+automium==0.2.6
+automium_web==0.1.1
+blinker==1.8.2
+certifi==2024.2.2
+cffi==1.16.0
+charset-normalizer==3.3.2
+click==8.1.7
+colorama==0.4.6
+crispy-bootstrap5==0.7
+cryptography==42.0.7
+defusedxml==0.8.0rc2
+dj-rest-auth==5.0.2
 Django==5.0.6
+django-allauth==0.62.1
 django-ckeditor==6.7.1
 django-cors-headers==4.3.1
+django-crispy-bootstrap==0.1.1.1
+django-crispy-forms==1.14.0
+django-filter==24.2
+django-jazzmin==3.0.0
 django-js-asset==2.2.0
+django-modeltranslation==0.18.11
+django-phonenumber-field==7.3.0
+django-taggit==3.1.0
+django-templated-mail==1.1.1
 djangorestframework==3.15.1
+djangorestframework-simplejwt==5.3.1
+djoser==2.2.2
 drf-yasg==1.21.7
+Flask==3.0.3
+freegames==2.5.3
+idna==3.7
 inflection==0.5.1
+itsdangerous==2.2.0
+Jinja2==3.1.4
+legacy==0.1.7
+MarkupSafe==2.1.5
+numpy==1.26.4
+oauthlib==3.2.2
+objects==0.3.1
 packaging==24.0
+phonenumbers==8.13.37
 pillow==10.3.0
+pycparser==2.22
+pygame==2.5.2
+PyJWT==2.8.0
+python3-openid==3.2.0
 pytz==2024.1
 PyYAML==6.0.1
+requests==2.31.0
+requests-oauthlib==1.3.1
+social-auth-app-django==5.4.0
+social-auth-core==4.5.2
 sqlparse==0.5.0
 typing_extensions==4.12.0
+tzdata==2024.1
 uritemplate==4.1.1
+urllib3==2.2.1
+Werkzeug==3.0.3
+whitenoise==6.6.0
